# urdf2mjcf

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  setup.py
urdf2mjcf/: __init__.py  cli.py  mesh_converter.py  mesh_decomposer.py  mjcf_generator.py
